02-sg/main.tf

#1st---All mandatory values should be supplied"
module "db" {
    source = "../../terraform-aws-securitygroup"
    project_name = var.project_name
    environment = var.environment
    sg_description = "SG for DB MYSQL Instance"
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    common_tags = var.common_tags
    sg_name = "db"
}

module "backend" {
    source = "../../terraform-aws-securitygroup"
    project_name = var.project_name
    environment = var.environment
    sg_description = "SG for Backend Instance"
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    common_tags = var.common_tags
    sg_name = "backend"
}

module "frontend" {
    source = "../../terraform-aws-securitygroup"
    project_name = var.project_name
    environment = var.environment
    sg_description = "SG for Frontend Instance"
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    common_tags = var.common_tags
    sg_name = "frontend"
}

# 2nd----Providing ingress details to already created Security groups

# DB is accepting connections from backend

resource "aws_security_group_rule" "db_backend" {
    type = "ingress"
    from_port = 3306
    to_port = 3306
    protocol = "tcp"
    source_security_group_id = module.backend.sg_id # source is where you are getting traffic from
    security_group_id = module.db.sg_id
}

resource "aws_security_group_rule" "backend_frontend" {
    type = "ingress"
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    source_security_group_id = module.frontend.sg_id # source is where you are getting traffic from
    security_group_id = module.backend.sg_id
}


resource "aws_security_group_rule" "frontend_public" {
    type = "ingress"
    from_port = 80
    to_port = 80
    protocol = "tcp"
    #source_security_group_id = module.frontend.sg_id # source is where you are getting traffic from
    cidr_blocks = ["0.0.0.0/0"] # no source here for frontend
    security_group_id = module.frontend.sg_id
}

#4th apply

module "bastion" {
    source = "../../terraform-aws-securitygroup"
    project_name = var.project_name
    environment = var.environment
    sg_description = "SG for bastion Instance"
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    common_tags = var.common_tags
    sg_name = "bastion"
}

module "ansible" {
    source = "../../terraform-aws-securitygroup"
    project_name = var.project_name
    environment = var.environment
    sg_description = "SG for ansible Instance"
    vpc_id = data.aws_ssm_parameter.vpc_id.value
    common_tags = var.common_tags
    sg_name = "ansible"
}

resource "aws_security_group_rule" "db_bastion" {
    type = "ingress"
    from_port = 3306
    to_port = 3306
    protocol = "tcp"
    source_security_group_id = module.bastion.sg_id # source is where you are getting traffic from
    #cidr_blocks = ["0.0.0.0/0"] # no source here for frontend
    security_group_id = module.db.sg_id
}

resource "aws_security_group_rule" "backend_bastion" {
    type = "ingress"
    from_port = 22  
    to_port = 22
    protocol = "tcp"
    source_security_group_id = module.bastion.sg_id # source is where you are getting traffic from
    security_group_id = module.backend.sg_id
}

resource "aws_security_group_rule" "backend_ansible" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    source_security_group_id = module.ansible.sg_id # source is where you are getting traffic from
    security_group_id = module.backend.sg_id
}

resource "aws_security_group_rule" "frontend_ansible" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    source_security_group_id = module.ansible.sg_id # source is where you are getting traffic from
    security_group_id = module.frontend.sg_id
}

resource "aws_security_group_rule" "frontend_bastion" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    source_security_group_id = module.bastion.sg_id # source is where you are getting traffic from
    security_group_id = module.frontend.sg_id
}


resource "aws_security_group_rule" "bastion_public" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    #source_security_group_id = module.frontend.sg_id # source is where you are getting traffic from
    cidr_blocks = ["0.0.0.0/0"] # no source here for frontend
    security_group_id = module.bastion.sg_id
}

resource "aws_security_group_rule" "ansible_public" {
    type = "ingress"
    from_port = 22
    to_port = 22
    protocol = "tcp"
    #source_security_group_id = module.frontend.sg_id # source is where you are getting traffic from
    cidr_blocks = ["0.0.0.0/0"] # no source here for frontend
    security_group_id = module.ansible.sg_id
}
